Web Inspector: Elements: selecting more than one DOM node causes the scope highlight to contrast https://bugs.webkit.org/show_bug.cgi?id=192118 <rdar://problem/46325664>
Reviewed by Devin Rousso.

Use an alpha blended border for the "selected" DOM scope highlight,
matching the "hovered" scope highlight.

* UserInterface/Views/DOMTreeOutline.css:
(.tree-outline.dom li.selected + ol.children.expanded):


Canonical link: https://commits.webkit.org/206821@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@238671 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Source/WebInspectorUI/UserInterface/Views/DOMTreeOutline.css
+++ b/Source/WebInspectorUI/UserInterface/Views/DOMTreeOutline.css
@@ -127,7 +127,7 @@ body[dir=rtl] .tree-outline.dom li:matches(.hovered, .selected) + ol.children.ex
 }
 
 .tree-outline.dom li.selected + ol.children.expanded {
-    border-color: hsl(0, 0%, 83%);
+    border-color: hsl(0, 0%, 65%, 0.5);
 }
 
 .tree-outline.dom li {
@@ -323,10 +323,6 @@ body[dir=rtl] .tree-outline.dom li.parent.shadow::after {
 
     .tree-outline.dom:focus li.selected .selection-area {
         background-color: var(--selected-background-color);
-    }
-
-    .tree-outline.dom li.selected + ol.children.expanded {
-        border-color: hsl(0, 0%, 27%);
     }
 
     .tree-outline.dom .shadow {
